--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+@media print {
+	a {
+		text-decoration: none;
+		color: black;
+	}
+}
+
 html {
 	box-sizing: border-box;
 }
@@ -66,6 +73,7 @@ section {
 .header {
 	margin-right: 2rem;
 	width: 12rem;
+	text-align: center;
 }
 
 .time {
